nuevos endpoints documentados
